--- a/css/styles.css
+++ b/css/styles.css
@@ -259,13 +259,12 @@ button {
     display: flex;
     flex-direction: column;
     height: 100%;
-    align-items: center;
 }
 
 /* Button close */
 
 
-.mobile-menu-close {
+.modal-button {
     position: absolute;
     top: 24px;
     right: 24px;
@@ -284,18 +283,18 @@ button {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-button:hover,
-.mobile-button:focus {
+.modal-button:hover,
+.modal-button:focus {
     background-color: #404bbf;
     border: none;
 }
 
-.mobile-menu-close {
+.button-close {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-button:hover>svg,
-.mobile-button:focus>svg {
+.modal-button:hover>svg,
+.modal-button:focus>svg {
     fill: #ffffff;
 }
 
@@ -306,7 +305,6 @@ button {
     list-style: none;
     padding: 0;
     margin: 0 0 20px;
-    text-align: center;
 }
 
 .mobile-menu-nav ul li {
@@ -318,7 +316,7 @@ button {
     font-size: 36px;
     color: #2e2f42;
     font-weight: 700;
-    line-height: 1.11%;
+    line-height: 1.11;
     letter-spacing: 0.02em;
 }
 
@@ -326,9 +324,14 @@ button {
     color: #404bbf;
 }
 
+.mobile-menu-nav {
+    margin-bottom: auto;
+}
+
 .mobile-menu-address {
-    text-align: center;
-    margin-bottom: 20px;
+    margin-top: auto;
+    margin-bottom: 48px;
+    font-style: normal;
 }
 
 .mobile-menu-address .phone {
@@ -351,8 +354,7 @@ button {
 
 .social-media {
     display: flex;
-    justify-content: center;
-    gap: 16px;
+    gap: 40px;
 }
 
 .social-media {
@@ -384,9 +386,300 @@ button {
     fill: #fff;
 }
 
+/* section 1 */
+
+.first-section {
+    padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-mob.jpg);
+    max-width: 320px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+@media screen and (min-resolution: 2dppx), (min-resolution: 192dpi), (-webkit-min-device-pixel-ratio: 2) {
+.first-section {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-mob2x.jpg);
+}
+}
+
+.order-button {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    background-color: #4d5ae5;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-button:hover,
+.order-button:focus {
+    background-color: #404BBF;
+}
+
+.section-title-main {
+    position: relative;
+    max-width: 496px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    margin: 0 auto;
+    padding-left: 52px;
+    padding-right: 52px;
+    padding-top: 72px;
+}
+
+
 @media screen and (min-width: 768px) {
+.first-section {
+    padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-tablet.jpg);
+    max-width: 678px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+@media screen and (min-resolution: 2dppx),
+(min-resolution: 192dpi),
+(-webkit-min-device-pixel-ratio: 2) {
+.first-section {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office-tablet2x.jpg);
+}
+}
+
 .mobile-menu {
     display: none;
-    }
 }
+
+.order-button {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    background-color: #4d5ae5;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+    
+.order-button:hover,
+.order-button:focus {
+    background-color: #404BBF;
+}
+    
+.section-title-main {
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.7;
+    margin: 0 auto;
+    padding-left: 136px;
+    padding-right: 136px;
+    padding-top: 112px;
+}
+}
+
+
+
+@media screen and (min-width: 1158px) {
+
+.first-section {
+    padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg);
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+.order-button {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    background-color: #4d5ae5;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-resolution: 2dppx),
+(min-resolution: 192dpi),
+(-webkit-min-device-pixel-ratio: 2) {
+.first-section {
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office2x.jpg);
+}
+}
+
+.order-button:hover,
+.order-button:focus {
+    background-color: #404BBF;
+}
+
+.section-title-main {
+    max-width: 496px;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #fff;
+    margin: 0 auto;
+    margin-bottom: 48px;
+}
+}
+
+
+/* section 2 */
+
+.features-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 96px;
+}
+
+/* Кожен елемент списку */
+.features-item {
+    margin-right: 16px;
+    margin-left: 16px;
+    margin-bottom: 72px;
+    text-align: center;
+}
+
+.icon {
+    display: none;
+}
+
+/* Заголовок кожного елемента */
+.features-item-title {
+    font-size: 36px;
+    font-weight: 700;
+    color: #2e2f42;
+    text-align: center;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+}
+
+/* Текст кожного елемента */
+.item-text {
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.02em;
+    color: #434455;
+    line-height: 1.5;
+}
+
+
+@media screen and (min-width: 768px) {
+
+.features-list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-top: 96px;
+    justify-content: space-between;
+}
+
+.features-item {
+    flex: 1 1 calc(50% - 32px);
+    margin: 16px;
+    text-align: left;
+}
+
+.icon {
+    display: none;
+}
+
+.features-item-title {
+    font-size: 36px;
+    font-weight: 700;
+    color: #2e2f42;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
+
+.item-text {
+    font-weight: 500;
+    font-size: 16px;
+    color: #434455;
+    letter-spacing: 0.02em;
+    line-height: 1.5;
+}
+}
+
+
+@media screen and (min-width: 1158px) {
+
+.features-section {
+    padding: 120px 0;
+    background-color: #fff;
+}
+
+.features-section .container {
+    position: relative;
+}
+
+.features-section ul {
+    display: flex;
+    gap: 24px;
+}
+
+.features-section li {
+    flex-basis: calc((100% - 72px) / 4);
+}
+
+.features-section li h3 {
+    margin-bottom: 8px;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+
+}
+}
+
+
+
 
