--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,14 @@ button {
 }
 
 
+@media screen and (max-width: 767px) {
+.page-header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+}
+
+
 @media screen and (min-width: 768px) {
 .burger-btn {
     display: none;
@@ -159,21 +167,18 @@ button {
 }
     
 .nav-link.current {
-    position: relati
+    position: relative;
 }
     
 .nav-link.current::after {
     content: '';
-    
     position: absolute;
     left: 0;
     bottom: -1px;
-    
+    display: block;
     width: 100%;
     height: 4px;
-    
     border-radius: 2px;
-    
     background-color: #404bbf;
 }
 
@@ -196,6 +201,10 @@ button {
     color: #434455;
         
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.email-header {
+    margin-bottom: 12px;
 }
 
 .nav-link:hover,
@@ -556,13 +565,8 @@ button {
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    padding: 0;
+    padding: 96px 0;
     margin: 0;
-}
-
-/* Кожен елемент списку */
-.features-item:not(:last-child) {
-    margin-bottom: 72px;
 }
 
 .icon {
@@ -586,7 +590,9 @@ button {
     letter-spacing: 0.02em;
     color: #434455;
     line-height: 1.5;
+    margin-bottom: 72px;
 }
+
 
 
 @media screen and (min-width: 768px) {
@@ -694,7 +700,7 @@ button {
 
 /* Загальні стилі для секції */
 .team-section {
-    padding: 60px 0;
+    padding: 96px 0;
     background-color: #f4f4fd;
 }
 
@@ -723,7 +729,6 @@ button {
     background: #fff;
     border-radius: 0 0 4px 4px;
     overflow: hidden;
-    width: calc((100% - 72px) / 4);
     text-align: center;
     transition: transform 0.3s ease;
 }
@@ -801,14 +806,7 @@ button {
     list-style: none;
     padding: 0;
 }
-
-.section-title-team {
-    padding-top: 96px;
-    padding-bottom: 96px;
 }
-
-}
-
 
 
 @media screen and (min-width: 1158px) {
@@ -869,7 +867,7 @@ button {
 
 }
 
-
+/* 4 */
 
 .additional-section.section-light {
     padding: 96px 0;
@@ -905,7 +903,6 @@ button {
     border: 1px solid #e1e1e1;
     border-radius: 5px;
     overflow: hidden;
-    width: 360px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background-color: #fff;
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -966,15 +963,24 @@ button {
 
 
 @media screen and (min-width: 768px) {
-.section-title-portfolio {
-    padding-top: 96px;
-    padding-bottom: 96px;
-}
 
 .app-item {
     border-radius: 5px;
     overflow: hidden;
-    width: calc((100%-48px) / 3 );
+    width: calc((100% - 24px) / 2 );
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background-color: #fff;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+}
+
+
+@media screen and (min-width: 1158px) {
+
+.app-item {
+    border-radius: 5px;
+    overflow: hidden;
+    width: calc((100% - 48px) / 3);
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background-color: #fff;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -993,7 +999,7 @@ button {
 }
 
 .footer-content {
-    display: flex;
+    justify-content: center;
     justify-content: space-between;
     align-items: flex-start;
     margin: 0 auto;
@@ -1042,10 +1048,7 @@ button {
     letter-spacing: 0.02em;
     color: #fff;
     text-align: center;
-}
-
-.footer-icons {
-    margin-top: 72px;
+    margin-bottom: 16px;
 }
 
 .link-footer {
@@ -1063,6 +1066,8 @@ button {
 .social-networks {
     width: 40px;
     height: 40px;
+    margin-left: 16px;
+    justify-content: center;
 }
 
 .social-link {
@@ -1075,6 +1080,7 @@ button {
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     gap: 24px;
+    margin-right: 15px;
 }
 
 .social-link:hover,
@@ -1093,6 +1099,9 @@ button {
     letter-spacing: 0.02em;
     color: #fff;
     text-align: center;
+    margin-top: 72px;
+    margin-bottom: 16px;
+    padding: 10px;
 }
 
 .form-container {
@@ -1126,16 +1135,21 @@ button {
 }
 
 .form-button {
+    align-items: center;
+    display: flex;
     background-color: #4d5ae5;    
     border: none;
     border-radius: 4px;
     padding: 8px 24px;
     width: 165px;
     height: 40px;
+    gap: 16px;
     color: #fff;
     cursor: pointer;
     justify-content: center;
     margin: 0 auto;
+    margin-top: 16px;
+    padding: 10px 20px;
 }
 
 .form-button:hover {
@@ -1156,9 +1170,9 @@ button {
 @media screen and (min-width: 768px) {
 
 .container.footer-content {
-    display: flex;
+    flex-wrap: nowrap;
     align-items: flex-start;
-    gap: 72px 24px;
+    gap: unset;
 }
 
 .footer-text-logo {
@@ -1174,7 +1188,7 @@ button {
 }
 
 .footer-text {
-    margin-bottom: 10px;
+    text-align: center;
 }
 
 .footer-list {
@@ -1572,3 +1586,4 @@ button {
     min-height: 584px;
 }
 }
+
